# kinova_pad

./: .gitignore  Readme.md
kinova_pad_msgs/: CMakeLists.txt  package.xml
kinova_pad_plugin/: CMakeLists.txt  kinova_pad_pluginlib.xml  package.xml
kinova_pad_plugin/config/: robotnik_pad_plugins_ps4_kinova_arm.yaml
kinova_pad_plugin/include/kinova_pad_plugin/: kinova_arm_plugin.h
kinova_pad_plugin/src/: kinova_arm_plugin.cpp  kinova_arm_plugins.cpp
