<?xml version="1.0"?>
<package format="2">
  <name>kinova_pad_plugin</name>
  <version>0.0.0</version>
  <description>The kinova_pad_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgomez@robotnik.es">Jose Gomez</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>robotnik_pad</build_depend>
  <build_depend>robotnik_pad_msgs</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>kinova_pad_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>robotnik_pad</build_export_depend>
  <build_export_depend>robotnik_pad_msgs</build_export_depend>
  <build_export_depend>kinova_msgs</build_export_depend>
  <build_export_depend>kinova_pad_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>robotnik_pad</exec_depend>
  <exec_depend>robotnik_pad_msgs</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>
  <exec_depend>kinova_pad_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <robotnik_pad plugin="${prefix}/kinova_pad_pluginlib.xml"/>

  </export>
</package>
